# meeting-notes-handler

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt  setup.py  test_package.py  uv.toml
docs/: file-organization.md
meeting_notes_handler/: __init__.py  config.py  content_cache.py  content_hasher.py  diff_engine.py  docs_converter.py  document_classifier.py  file_organizer.py  google_meet_fetcher.py  main.py  series_tracker.py  smart_extractor.py
meeting_notes_handler/analyzers/: __init__.py  analyzer_factory.py  base_analyzer.py  content_extractor.py  openai_analyzer.py  personal_analyzer.py  weekly_analyzer.py
meeting_notes_handler/templates/: personal_actions.jinja2  weekly_summary.jinja2
tests/: __init__.py  test_content_cache.py  test_content_hasher.py  test_diff_engine.py  test_docs_converter.py  test_document_classifier.py  test_google_meet_fetcher.py  test_series_tracker.py  test_smart_extractor.py  test_smart_extractor_simple.py
